<resources>
    <string name="app_name">Kerjamin</string>
    <string name="title">Menjamin Pekerjaan Rumah Anda</string>
    <string name="welcome_message">Nikmati pelayanan jasa dari Kerjamin</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="account">Belum punya akun?</string>
    <string name="register">Daftarkan akun Anda dengan mengisi form berikut</string>

    <!--    Form-->
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="nik">NIK</string>
    <string name="name">Nama Lengkap</string>
    <string name="born_date">Tanggal Lahir</string>
    <string name="phone">No. Telepon</string>
    <string name="name_free">Nama Freelancer</string>
    <string name="name_client">Nama Client</string>
    <string name="distant_free">Jarak</string>
    <string name="skill">Keahlian Freelancer</string>
    <string name="rating">Rating</string>
    <string name="specialist">Bidang</string>
    <string name="budget">Perkiraan Harga</string>
    <string name="adress">Alamat Lengkap</string>
    <string name="username">Username</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string-array name="gender">
        <item>Jenis Kelamin</item>
        <item>perempuan</item>
        <item>laki-laki</item>
    </string-array>

    <!--    Button-->
    <string name="chat">Chat dengan Freelancer</string>
    <string name="order">Pesan</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="register_button">Daftar Akun</string>
    <string name="transfer">Transfer</string>
    <string name="send_review">Kirim Review</string>
    <string name="send">Kirim</string>
    <string name="refresdh">Refresh</string>
    <string name="form">Isi Form Keluhan</string>
    <string name="confirm_order">Konfirmasi Pesanan</string>
    <string name="confirm_finish">Konfirmasi Selesai</string>
    <string name="cancel">Batalkan</string>
    <string name="pay">Bayar</string>
    <string name="report">Laporkan Freelancer</string>

    <!--    Bottom Navigation-->
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Pesanan</string>
    <string name="title_help">Bantuan</string>
    <string name="title_profile">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Detail-->
    <string name="span1">Baik</string>
    <string name="span2">Sopan</string>
    <string name="span3">Teliti</string>
    <string name="span4">Cekatan</string>

    <!--    card order-->
    <string name="category">Kategori Jasa</string>
    <string name="date">Tanggal</string>

    <!--    Home-->
    <string name="hai">Hai,</string>
    <string name="home">Silahkan pilih kategori jasa yang anda butuhkan</string>
    <string name="service">Servis Elektronik</string>
    <string name="cleaner">Jasa Kebersihan</string>
    <string name="builder">Tukang Bangunan</string>
    <string name="arsitec">Arsitek Bangunan</string>
    <string name="news">Berita</string>
    <string name="news_title">Judul Berita</string>

    <!--    Help-->
    <string name="whatsapp">WhatsApp</string>
    <string name="phone_help">Telepon</string>

    <!--    List Freelancer-->
    <string name="add_loc">Tambahkan koordinat alamat</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="todo">TODO</string>

    <!--    Maps Freelancer-->
    <string name="list">Daftar Freelancer</string>

    <!--    Job Desk-->
    <string name="desc">*Untuk total, pengguna dikenakan fee sebesar 2% dari harga yang tertera</string>
    <string name="desc1">Jelaskan keluhan atau permasalahan anda yang ingin diselesaikan oleh freelancer</string>
    <string name="edt_desc1">Keluhan</string>
    <string name="desc2">Silahkan masukan harga yang telah disepakati</string>
    <string name="edt_desc2">Harga*</string>
    <string name="start">Pesan</string>

    <!--    Detail Job-->
    <string name="status">Status</string>
    <string name="wait">Menunggu konfirmasi</string>
    <string name="accept">Diterima freelancer</string>
    <string name="on_going">Dalam Proses</string>
    <string name="finish">Selesai</string>
    <string name="problem">Keluhan :</string>
    <string name="tv_problem">Keluhan anda</string>
    <string name="start_cost">Perkiraan harga</string>
    <string name="final_cost">Harga yang disepakati</string>
    <string name="list_job">Detail Pekerjaan</string>
    <string name="total">Total</string>
    <string name="dummy">0000000</string>
    <string name="detail_job">Berikut ini detail pekerjaan yang akan dilakukan oleh freelancer</string>

    <!--    Review-->
    <string name="desc4">Berikan penilaian anda terhadap kinerja Freelancer</string>
    <string name="review">Berikan komentar anda</string>
    <string name="tv_review">Komentar anda</string>

    <!--    Profile-->
    <string name="info">Informasi Akun</string>
    <string name="term">Ketentuan Layanan</string>


    <!--    Payment-->
    <string name="tv_total">Total Tagihan</string>
    <string-array name="payment">
        <item>Pilih metode pembayaran</item>
        <item>BCA</item>
        <item>Mandiri</item>
        <item>OVO</item>
        <item>Gopay</item>
        <item>Shopeepay</item>
    </string-array>

    <!--    Login-->
    <string name="failed_login">Email dan Password tidak sesuai</string>
    <string name="success_login">Selamat Datang</string>
    <string name="empty_email">Masukan email anda</string>
    <string name="empty_password">Masukan password anda</string>
    <string name="invalid_email">Email tidak valid</string>

    <!--    Login-->
    <string name="failed_register">Masukan data dengan benar</string>
    <string name="empty_nik">Masukan NIK anda</string>
    <string name="empty_name">Masukan nama lengkap anda</string>
    <string name="empty_username">Masukan username anda</string>
    <string name="empty_address">Masukan alamat lengkap</string>
    <string name="empty_gender">Masukan jenis kelamin anda</string>
    <string name="empty_phone">Masukan nomor whatsapp</string>
    <string name="empty_coordinate">Masukan titik koordinat</string>
    <string name="empty_borndate">Masukan tanggal lahir anda</string>
    <string name="success_register">Selamat! Akun anda berhasil dibuat</string>


    <!--    Fake Data Client-->
    <string name="email1">hanin@gmail.com</string>
    <string name="nik1">123456789</string>
    <string name="name1">Hanindya</string>
    <string name="born_date1">32 Maret 2000</string>
    <string name="phone1">08936527644</string>
    <string name="adress1">Jl. Sutawinangun</string>
    <string name="username1">susan</string>
    <string name="jenis_kelamin1">perempuan</string>

    <!--    Fake Data Freelancer-->
    <string name="name2">Dadang Sudrajat</string>
    <string name="distant_free2">1 Km</string>
    <string name="skill2">Tukang cat</string>
    <string name="rating2">7</string>
    <string name="specialist2">Tukang bangunan</string>
    <string name="adress2">Jl. Tuparev</string>
    <string name="jenis_kelamin2">Pria</string>

    <!--   Fake Detail Job-->
    <string name="tv_problem3">Tembok saya retak</string>
    <string name="tv_review3">Pekerjaannya sangat rapih, orangnya juga baik dan cekatan</string>
    <string name="start_cost3">Rp 400.000</string>
    <string name="final_cost3">Rp 400.000</string>
    <string name="total3">Rp 408.000</string>
    <string name="data_error">404 Error</string>
    <string name="normal">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
</resources>