<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.project.kerjamin.data.ui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list_order"
        android:name="com.capstone.project.kerjamin.data.ui.ui.order.ListOrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_list_order" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.capstone.project.kerjamin.data.ui.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.project.kerjamin.data.ui.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>