<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.ui.order.DetailOrder3Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_freelancer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="46dp"
                    android:layout_height="69dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/name"/>

                <TextView
                    android:id="@+id/tv_username"
                    style="@style/TextContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/img_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_user"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/name2" />

                <TextView
                    android:id="@+id/tv_specialist"
                    style="@style/TextContent.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/img_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/img_user"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username"
                    android:text="@string/specialist2" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.462"
                    app:layout_constraintStart_toEndOf="@+id/img_user"
                    app:layout_constraintTop_toBottomOf="@+id/tv_specialist">

                    <TextView
                        android:id="@+id/tv_followers"
                        style="@style/TextContent.Form"
                        android:layout_width="141dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        app:drawableStartCompat="@drawable/ic_location"
                        android:text="@string/distant_free2" />

                    <TextView
                        android:id="@+id/tv_following"
                        style="@style/TextContent.Form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:drawableStartCompat="@drawable/ic_rating"
                        android:text="@string/rating2" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_freelancer">

            <TextView
                android:id="@+id/tv_state"
                style="@style/TextContent.Form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="0dp"
                android:paddingEnd="220dp"
                android:text="@string/status"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_status"
                    style="@style/TextContent.Small.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/finish"
                    android:lineSpacingMultiplier="1"/>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_desc3"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/problem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <TextView
            android:id="@+id/tv_problem"
            style="@style/TextContent"
            android:background="@color/grey_100"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:maxLines="10"
            android:textAlignment="center"
            android:text="@string/tv_problem3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_cost"
            style="@style/cardView"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_problem">

            <TextView
                style="@style/TextContent.Small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/final_cost" />

            <TextView
                android:id="@+id/tv_cost"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="280dp"
                android:layout_marginTop="15dp"
                android:text="@string/final_cost3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_total"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_cost">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/total" />

            <TextView
                android:id="@+id/tv_total"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="280dp"
                android:layout_marginTop="15dp"
                android:text="@string/total3" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fee"
            style="@style/TextReallySmall"
            android:layout_width="384dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_total" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_rating"
            style="@style/cardView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_100"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fee">

            <TextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15sp"
                android:text="@string/rating" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="135dp"
                android:numStars="5" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_comment"
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_100"
            android:maxLines="10"
            android:text="@string/tv_review3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_rating"/>

        <Button
            android:id="@+id/btn_list"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/list_job"
            android:textAppearance="@style/TextContent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comment" />

        <Button
            android:id="@+id/btn_whatsapp"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/chat"
            android:textAppearance="@style/TextContent"
            android:textSize="18sp"
            app:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_list" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>